--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "db:init": "prisma migrate dev",
+    "db:init": "prisma db push",
     "db:seed": "node dist/prisma/seed.js",
     "start:all": "npm run db:init && npm run build && npm run db:seed && npm run start:dev"
   },
